# openai_export_parser

./: .gitignore  CHANGELOG.md  COLLISION_FILES.md  COMPREHENSIVE_MATCHING_SOLUTION.md  CONTRIBUTING.md  DALLE_GENERATIONS_MAPPING_ANALYSIS.md  DEDUPLICATION_AND_ASSETS_REPORT.md  DEPLOYMENT_READY.md  FEATURES_v0.3.0.md  FILE_ID_CODE_EXAMPLES.md  FINAL_OUTPUT_v6_SUMMARY.md  HTML_Output_plan.txt  HTML_VIEWER_IMPLEMENTATION.md  IMPLEMENTATION_STATUS_v0.3.0.md  LICENSE  MATCHING_STRATEGY_FLOWCHART.txt  MEDIA_MATCHER_ANALYSIS.md  MEDIA_MATCHING_GUIDE_INDEX.md  MEDIA_ORGANIZATION_ANALYSIS.md  QUICK_REFERENCE.md  README.md  RESUME_MEDIA_MATCHING.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  pyproject.toml  rename_unknown_to_txt.sh  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
openai_export_parser/: __init__.py  claude_parser.py  cli.py  comprehensive_media_indexer.py  comprehensive_media_matcher.py  conversation_organizer.py  html_generator.py  html_renderer.py  media_indexer.py  media_matcher.py  media_reference_extractor.py  parser.py  render_html.py  schema_inference.py  threader.py  utils.py
tests/: __init__.py  conftest.py  test_conversation_organizer.py  test_html_generator.py  test_media_indexer.py  test_media_indexer_paths.py  test_media_matcher.py  test_parser.py  test_reference_extractor.py  test_stream_extract.py  test_utils.py
tests/sample_exports/mini_export/: conversations.json
